Ultrawide monitor width stretch bug fix

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,5 +1,14 @@
 @use "./../../variables";
 
+@media (min-width: 1921px) {
+  .featured {
+    width: 65%;
+  }
+  .other {
+    width: 65%;
+  }
+}
+
 @mixin project {
   @at-root .featured__elements {
     &-title {
